overflow fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   color: #424242;
+  overflow-x: hidden;
 }
 
 .bld {
